introduce and use Path class